# rhino-player

./: .cursorrules  .gitignore  COPYRIGHT  Cargo.toml  README.md  build.rs  clippy.toml
.cargo/: config.toml  cranelift.toml
.cursor/rules/: clippy-no-suppress.mdc  complexity-and-module-design.mdc  debug-logging.mdc  docs-no-mirrored-tuning.mdc  document-first.mdc  events-over-polling.mdc  fix-compilation-warnings.mdc  refactor-touched-longest.mdc  ui-cursor.mdc
data/: README.md  install-system-wide.sh  install-to-user-dirs.sh
data/applications/: ch.rhino.RhinoPlayer.desktop
data/icons/: README.md  rebuild-png-assets.sh
data/metainfo/: ch.rhino.RhinoPlayer.metainfo.xml
data/vs/: README.md  rhino_60_mvtools.vpy  rhino_60_mvtools_multicore.vpy
doc/: rhino-player.1
docs/: README.md  architecture.md  product-and-use-cases.md  references-gtk4-macos-header-menus.md  references-gtk4-toplevel-aspect.md  references-mvtools-super-levels.md
docs/features/: 01-cargo-skeleton.md  02-application-shell.md  03-mpv-embedding.md  04-transport-and-progress.md  05-playlist.md  06-open-and-cli.md  07-sibling-folder-queue.md  08-tracks.md  09-chapters.md  10-video-options.md  11-drag-and-drop.md  12-url-and-streams.md  13-input-shortcuts.md  14-preferences.md  15-mpris.md  16-session-persistence.md  17-window-behavior.md  18-thumbnail-preview.md  19-playlist-dialog.md  20-static-build.md  21-recent-videos-launch.md  22-audio-volume-mute.md  23-recent-continue-vs-done-research.md  24-subtitles.md  25-smooth-playback.md  26-sixty-fps-motion.md  27-move-to-trash.md  28-playback-speed.md  29-bluray-deinterlace.md  30-dvd-unified-timeline.md  31-playback-entity.md  32-fill-screen.md
packaging/macos/: Info.plist.in
releases/: README.md  github-release-v1.0.0.md  github-release-v1.3.0.md
scripts/: build-deb.sh  build-mpv-vapoursynth-system.sh  cargo-cranelift.sh  check-module-lines.sh  ensure-vapoursynth-debian.sh  macos-build-app-bundle.sh  macos-dev-env.sh  mpv-observe-vf-fps.sh  stage-github-release.sh
src/: app.rs  audio_tracks.rs  audio_tracks_tooltip.rs  chapter_list.rs  continue_undo.rs  db.rs  dvd_chapter_eof.rs  dvd_entity.rs  dvd_entity_sanitize.rs  dvd_entity_still.rs  dvd_entity_timeline.rs  dvd_entity_timeline_build.rs  dvd_entity_timeline_queue.rs  dvd_ifo_parse.rs  dvd_ifo_parse_tests.rs  dvd_sibling_eof_advance.rs  dvd_vob_bar.rs  dvd_vob_chain_bar.rs  dvd_vob_chain_seek.rs  dvd_vob_chapter_marks.rs  dvd_vob_ffprobe.rs  dvd_vob_ifo_build.rs  dvd_vob_log.rs  dvd_vob_mpv_probe.rs  dvd_vob_probe_tail.rs  dvd_vob_timeline.rs  dvd_vob_timeline_durs.rs  dvd_vob_timeline_entity_durs.rs  dvd_vob_timeline_ifo.rs  dvd_vob_timeline_resume.rs  dvd_vob_timeline_tests.rs  dvd_vob_timeline_transport.rs  fullscreen_timing.rs  glib_log_filter.rs  glib_source_drop.rs  header_menu_scroll.rs  header_menu_tracks.rs  history.rs  human_media_title.rs  icons.rs  (+72 more)
src/app/: base.rs  build_window.rs  chrome_wiring.rs  file_actions.rs  file_loaded.rs  final_actions.rs  final_actions_quit_close.rs  final_actions_smooth_resize.rs  final_actions_wire.rs  input.rs  load.rs  open_handler.rs  realize.rs  realize_gl_handlers.rs  recent_undo.rs  seek_wiring.rs  tooltips.rs  transport_events.rs  vs_setup_dialog.rs  wall_clock_fmt.rs
src/db/: connection_init_and_audio.rs  history_and_media_playback.rs  media_me_budget.rs  media_me_budget_tests.rs  media_snapshots_thumbs.rs  media_source_fps.rs  video_sub_prefs.rs
src/dvd_ifo_parse/: bitreader.rs  buf.rs  main_title.rs  pgc.rs  streams.rs  streams_tests.rs  sub_mpv_id.rs  sub_mpv_id_tests.rs  time.rs  title_pgc.rs  title_vob_durations.rs  title_vob_sector_durs.rs  vts.rs
src/human_media_title/: patterns.rs  tech_strip.rs
src/media_probe/: card_data_resume_thumbs.rs  continue_grid_cache_hook.rs  thumb_frame_dark.rs  thumb_mpv_node.rs  thumb_pipeline_and_cards.rs  thumb_screenshot_raw.rs  thumb_vo_image.rs
src/mpris/: linux.rs  linux_sync.rs  mod.rs
src/mpv_embed/: 2.rs  gl_platform.rs  linux_egl_helpers.rs  macos_video_attach.rs  macos_video_bundle.rs  macos_video_cgl.rs  macos_video_displaylink.rs  macos_video_layer.rs  macos_video_layer_frame.rs  main_bundle_egl_render.rs  mpv_bundle_macos_vf_macro.rs  mpv_chapter_scrub.rs  mpv_pending_resume.rs  mpv_persistence.rs  mpv_persistence_chapter_seek.rs  preview_gl_set_tracks.rs  resume_seek.rs
src/recent_view/: 1.rs  2.rs  3.rs  backfill_context_schedule.rs  card_dims.rs  fill_idle_probe.rs  fill_row_cards.rs  undo_bar_scroll_new_row.rs
src/seek_bar_preview/: 1.rs  connect_popover_wiring.rs  connect_preview_gl.rs  connect_preview_seek.rs  macos_compositing.rs  preview_do_seek.rs  preview_frame_pump.rs  preview_media_load.rs  reset_on_media.rs  state_and_vo_pump.rs
src/video_pref/: apply_mpv_video_branches.rs  bluray_deinterlace.rs  bluray_playback.rs  decode_and_apply_mpv_video.rs  (+35 more)
tests/: mpv_smoke.rs
(+92 files in other folders)
