[package]
name = "rhino-player"
version = "0.1.0"
edition = "2021"
default-run = "rhino-player"
authors = ["Peter Adrianov"]
description = "Rhino Player — mpv with GTK4 / Adwaita for Linux"
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/adrianov/rhino-player"
repository = "https://github.com/adrianov/rhino-player"
rust-version = "1.74"

[dependencies]
gtk = { version = "0.9", package = "gtk4", features = ["v4_14"] } # window, header, dialogs
gdk-pixbuf = { version = "0.20" } # JPEG → GdkTexture (not gdk::Texture::from_bytes — that is for serialized textures)
adw = { version = "0.7", package = "libadwaita", features = ["v1_5"] }
glib = { version = "0.20", features = ["v2_80"] }                 # main loop, clones, timers
libmpv2 = { version = "5.0.3" }                                    # libmpv
libc = "0.2"                                                       # setlocale for libmpv
libloading = "0.8"                                                # libEGL, libGL
rusqlite = { version = "0.32", features = ["bundled"] }           # app data (one sqlite file)
# Natural (numeric) + Unicode-aware lexical order for file/dir names; see `sibling_advance`.
lexical-sort = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Subtitle / language hint fuzzy match in `sub_tracks`.
strsim = "0.11"

# Clippy: see clippy.toml for thresholds. Module length is policed by
# `.cursor/rules/refactor-touched-longest.mdc` and `clippy::too_many_lines`.
[lints.clippy]
cognitive_complexity = "warn"
too_many_lines = "warn"

[profile.release]
lto = true
codegen-units = 1
