[package]
name = "rhino-player"
version = "1.0.0"
edition = "2021"
default-run = "rhino-player"
authors = ["Peter Adrianov"]
description = "Rhino Player — mpv with GTK4 / libadwaita (Linux primary; macOS via Homebrew, experimental)"
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/adrianov/rhino-player"
repository = "https://github.com/adrianov/rhino-player"
rust-version = "1.74"

[dependencies]
gtk = { version = "0.9", package = "gtk4", features = ["v4_14"] } # window, header, dialogs
gdk-pixbuf = { version = "0.20" } # JPEG → GdkTexture (not gdk::Texture::from_bytes — that is for serialized textures)
adw = { version = "0.7", package = "libadwaita", features = ["v1_5"] }
glib = { version = "0.20", features = ["v2_80"] }                 # main loop, clones, timers
libmpv2 = { version = "5.0.3" }                                    # libmpv
libmpv2-sys = "4.0.1"                                              # mpv_node chapter-list (pairs with libmpv2)
libc = "0.2"                                                       # setlocale for libmpv
libloading = "0.8"                                                # libEGL, libGL
rusqlite = { version = "0.32", features = ["bundled"] }           # app data (one sqlite file)
# Natural (numeric) + Unicode-aware lexical order for file/dir names; see `sibling_advance`.
lexical-sort = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Subtitle / language hint fuzzy match in `sub_tracks`.
strsim = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
async-channel = "2.5"
futures = { version = "0.3", default-features = false, features = ["async-await"] }
mpris-server = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = { version = "0.6.4", features = ["std"] }
objc2-app-kit = { version = "0.3.2", features = ["NSEvent", "NSWindow", "NSView", "NSResponder", "NSColor", "NSCursor", "block2"] }
objc2-foundation = { version = "0.3.2", features = ["NSGeometry", "NSValue", "NSString", "NSLock", "NSThread", "NSFileManager", "NSError", "NSURL"] }
objc2-quartz-core = { version = "0.3.2", features = ["objc2-core-foundation", "objc2-core-video", "objc2-open-gl", "CALayer", "CAOpenGLLayer", "CATransaction"] }
objc2-open-gl = { version = "0.3.2", features = ["std"] }
objc2-core-video = { version = "0.3.2", default-features = false, features = ["std", "CVBase", "CVReturn", "CVDisplayLink", "objc2-core-graphics"] }
# Required only to unlock objc2-core-video's `CVDisplayLinkCreateWithActiveCGDisplays`
# binding (the function header lives in CoreVideo but is feature-gated on
# objc2-core-graphics in the crate). We do not call CG APIs ourselves.
objc2-core-graphics = { version = "0.3.2", default-features = false, features = ["std"] }
gdk4-macos = { version = "0.9", features = ["v4_8"] }

# Clippy: see clippy.toml for thresholds. Module length is policed by
# `.cursor/rules/refactor-touched-longest.mdc` and `clippy::too_many_lines`.
[lints.clippy]
cognitive_complexity = "deny"
excessive_nesting = "deny"
too_many_lines = "deny"

[profile.release]
lto = true
codegen-units = 1
